--- a/recipes/tacos.html
+++ b/recipes/tacos.html
@@ -1,1 +1,21 @@
 <!DOCTYPE html>
+<head>
+<h1>Shredded Chicken Tacos Recipe</h1>
+<img src="../images/Odin Tacos.webp">
+</head>
+<body>
+<h2><em>Description</em></h2>
+<p>This chicken tacos recipe is easy to make in a slow cooker. Spoon the filling into warm tortillas for a very tasty meal.</p>
+<h3>Ingredients:</h3>
+<ul>
+  <li>1 cup chicken broth</li>
+  <li>3 tablespoons taco seasoning mix</li>
+  <li>1 pound skinless, boneless chicken breasts</li>
+</ul>
+<h3>Steps:</h3>
+<ol>
+  <li>Combine chicken broth and taco seasoning mix in a bowl.</li>
+  <li>Place chicken in a slow cooker. Pour chicken broth mixture over chicken.</li>
+  <li>Cook on Low for 6 to 8 hours. Shred chicken.</li>
+</ol>
+</body>
