fixed a bug with a chicken image

--- a/recipes/chicken.html
+++ b/recipes/chicken.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <head>
 <h1>Slow Cooked Italian Chickenn Recipe</h1>
-<img src="../images/Odin Chicken.webp.webp">
+<img src="../images/Odin Chicken.webp">
 </head>
 <body>
 <h2><em>Description</em></h2>
